--- a/docker/config.ini
+++ b/docker/config.ini
@@ -10,7 +10,7 @@
 # Endpoint for websocket RPC to listen on
   rpc-endpoint = 0.0.0.0:9876
 
-#miner = ["initminer","5JNHfZYKGaomSFvd4NUdQ9qMcEAC43kujbfjueTHpVapX1Kzq2n"]
+#miner = ["omnikraut","5JNHfZYKGaomSFvd4NUdQ9qMcEAC43kujbfjueTHpVapX1Kzq2n"]
 
 # Endpoint for P2P node to listen on
 # p2p-endpoint = 
